build(root): add base setup

--- a/core/package.json
+++ b/core/package.json
@@ -2,11 +2,19 @@
   "name": "@extd/core",
   "version": "0.0.1",
   "description": "A true extensible web UI kit",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ext", "design", "system", "ui", "kit", "react"],
+  "typings": "dist/index.d.ts",
+  "keywords": [
+    "ext",
+    "design",
+    "system",
+    "ui",
+    "kit",
+    "react"
+  ],
   "author": "dvkndn",
   "license": "MIT",
   "repository": {
@@ -16,5 +24,14 @@
   "bugs": {
     "url": "https://github.com/dvkndn/extd/issues"
   },
-  "homepage": "https://github.com/dvkndn/extd#readme"
+  "homepage": "https://github.com/dvkndn/extd#readme",
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "16"
+  },
+  "devDependencies": {
+    "@types/react": "16.9.3",
+    "parcel-bundler": "1.12.3",
+    "typescript": "3.6.3"
+  }
 }
