--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@typescript-eslint/eslint-plugin": "2.3.1",
     "@typescript-eslint/parser": "2.3.1",
     "eslint": "6.4.0",
-    "husky": "3.0.7"
+    "eslint-plugin-react": "7.14.3",
+    "husky": "3.0.7",
+    "typescript": "3.6.3"
   }
 }
