--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,8 @@
   "description": "A true extensible web UI kit",
   "main": "dist/index.js",
   "scripts": {
-    "start": "parcel src/index.ts",
+    "start": "webpack --mode=development",
+    "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "typings": "dist/index.d.ts",
@@ -32,7 +33,9 @@
   },
   "devDependencies": {
     "@types/react": "16.9.3",
-    "parcel-bundler": "1.12.3",
-    "typescript": "3.6.3"
+    "ts-loader": "6.1.2",
+    "typescript": "3.6.3",
+    "webpack": "4.41.0",
+    "webpack-cli": "3.3.9"
   }
 }
