--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "module": "es6",
+    "target": "es5",
     "esModuleInterop": true,
     "declaration": true,
-    "outDir": "../dist/",
-    "emitDeclarationOnly": true,
+    "outDir": "./dist/",
     "jsx": "react"
   }
 }
