--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "module": "es6",
-    "target": "es5",
-    "esModuleInterop": true,
     "declaration": true,
+    "esModuleInterop": true,
+    "incremental": true,
+    "jsx": "react",
+    "module": "es6",
     "outDir": "./dist/",
-    "jsx": "react"
+    "target": "es5"
   }
 }
