--- a/package.json
+++ b/package.json
@@ -31,12 +31,8 @@
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
-    "@typescript-eslint/eslint-plugin": "2.3.1",
-    "@typescript-eslint/parser": "2.3.1",
     "eslint": "6.4.0",
-    "eslint-plugin-react": "7.14.3",
     "husky": "3.0.7",
-    "lint-staged": "9.4.0",
-    "typescript": "3.6.3"
+    "lint-staged": "9.4.0"
   }
 }
