--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,13 +29,15 @@
   "homepage": "https://github.com/dvkndn/extd#readme",
   "dependencies": {},
   "peerDependencies": {
-    "react": "16"
+    "react": ">= 16"
   },
   "devDependencies": {
+    "@extd/eslint-config": "1.0.0",
     "@types/react": "16.9.3",
+    "css-loader": "3.2.0",
     "ts-loader": "6.1.2",
-    "typescript": "3.6.3",
     "webpack": "4.41.0",
-    "webpack-cli": "3.3.9"
+    "webpack-cli": "3.3.9",
+    "typescript": "3.6.3"
   }
 }
