--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.10.0"
   },
   "devDependencies": {
+    "@extd/eslint-config": "1.0.0",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
     "parcel-bundler": "1.12.3",
