--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,11 +33,11 @@
   },
   "devDependencies": {
     "@extd/eslint-config": "1.0.0",
-    "@types/react": "16.9.3",
+    "@types/react": "16.9.11",
     "css-loader": "3.2.0",
-    "ts-loader": "6.1.2",
-    "webpack": "4.41.0",
-    "webpack-cli": "3.3.9",
-    "typescript": "3.6.3"
+    "ts-loader": "6.2.1",
+    "typescript": "3.7.2",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10"
   }
 }
